[package]
name = "endorser-tool"
version = "0.1.0"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
description = "A utility for signing Indy Node ledger transactions"
edition = "2018"
publish = false

[dependencies]
indy-vdr = { git = "https://github.com/andrewwhitehead/indy-vdr", rev = "aa8fc57627e0f4014ae4ef77b5f546a976cdf3c8" }
indy-utils = { version = "0.1", git = "https://github.com/bcgov/indy-shared-rs", default-features = false, features = ["ed25519"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
web-view = { version = "0.5.4", features = ["edge"] }

[package.metadata.bundle]
identifier = "com.github.andrewwhitehead.endorser-tool"

#[package.metadata.deb]
#assets = [
#    ["target/release/endorser-tool", "usr/bin/endorser-tool", "755"],
#    ["endorser-tool.desktop", "usr/share/applications/", "644"],
#]
