[package]
name = "endorser-tool"
version = "0.1.0"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
description = "A utility for signing Indy Node ledger transactions"
edition = "2018"
publish = false

[dependencies]
indy-utils = { version = "0.4", default-features = false, features = ["ed25519"] }
indy-vdr = { version = "0.3.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
web-view = { version = "0.7", features = ["edge"] }

[package.metadata.bundle]
identifier = "com.github.andrewwhitehead.endorser-tool"

#[package.metadata.deb]
#assets = [
#    ["target/release/endorser-tool", "usr/bin/endorser-tool", "755"],
#    ["endorser-tool.desktop", "usr/share/applications/", "644"],
#]
